[package]
name = "leaf"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] } # Needs to match ulid
csv = "1.1"
env_logger = "0.7.1"
log = "0.4"
markup = "0.4.1"
rusty_ulid = { version = "0.9.2", default-features = false, features = ["serde", "ulid-generation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2.1", default-features = false }

[dev-dependencies]
tempfile = "3.1"
