[package]
name = "leaf"
version = "0.2.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] } # Needs to match ulid
csv = "1.1"
lazy_static = "1.4"
log = "0.4"
markup = "0.4.1"
regex = { version = "1.0", default-features = false, features = ["std", "perf"] }
rocket = "0.4.7"
rust-argon2 = { version = "0.8.0", default-features = false }
rusty_ulid = { version = "0.9.2", default-features = false, features = ["serde", "ulid-generation"] }
serde = { version = "1.0", features = ["derive"] }
time = "0.1" # Needs to match cookie (in rocket)

# Needs to match rocket
[dependencies.hyper]
version = "0.10.13"
default-features = false

[dev-dependencies]
tempfile = "3.1"
